icon-view: emit selection-changed when changing the model

Only if there was a selection active.

https://bugzilla.gnome.org/show_bug.cgi?id=681613